# cdc-streaming-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: results.md  run.py
deploy/: kafka_consumer.py
deploy/debezium/: orders-connector.json
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: ADR-001-exactly-once-lsn.md  ADR-002-iceberg-merge.md
src/cdcpipe/: __init__.py  __main__.py  events.py  generate.py  iceberg_sink.py  logging_setup.py  merge.py  pipeline.py  reconcile.py  report.py  spark_job.py
tests/: test_events.py  test_iceberg_sink.py  test_merge.py  test_pipeline_reconcile.py  test_spark_job.py
