[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-streaming-pipeline"
version = "0.1.0"
description = "Postgres CDC -> Kafka -> streaming merge -> Iceberg, with exactly-once out-of-order upserts and a source-to-lakehouse correctness check."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Prasannakumar Kasindala", email = "Kasindalap@gmail.com" }]
keywords = ["data-engineering", "cdc", "change-data-capture", "kafka", "debezium",
            "iceberg", "lakehouse", "spark", "streaming", "exactly-once"]
dependencies = [
    "pyiceberg[sql-sqlite]>=0.11",
    "pyarrow>=14",
]

[project.optional-dependencies]
# The Spark job runs on a cluster; pyspark is only needed to run/inspect it locally.
spark = ["pyspark>=3.5"]
# kafka-python powers the local dev consumer (deploy/kafka_consumer.py).
kafka = ["kafka-python>=2.0"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[project.scripts]
cdcpipe = "cdcpipe.__main__:main"

[project.urls]
Homepage = "https://github.com/PrasannakumarKasindala/cdc-streaming-pipeline"
Source = "https://github.com/PrasannakumarKasindala/cdc-streaming-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 95
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
